Add smooth scrolling to sections

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>GreatUniHack 2018</title>
   <script src="/static/js/jQuery.js"></script>
+  <script src="/static/js/smoothScroll.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
@@ -40,19 +41,19 @@
             <div class="collapse navbar-collapse" id="collapsible-nav">
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                  <a class="nav-link smooth-transitions" href="#hero">WHEN & WHERE</a>
+                  <a class="nav-link smooth-transitions">WHEN & WHERE</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link smooth-transitions" href="#about-us">ABOUT US</a>
+                  <a class="nav-link smooth-transitions" onclick="scrollToSection('#about-us')">ABOUT US</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link smooth-transitions" href="#faq">FAQ</a>
+                  <a class="nav-link smooth-transitions" onclick="scrollToSection('#faq')">FAQ</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link smooth-transitions" href="#gallery">LAST YEAR</a>
+                  <a class="nav-link smooth-transitions" onclick="scrollToSection('#gallery')">LAST YEAR</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link smooth-transitions" href="#sponsors">SPONSORS</a>
+                  <a class="nav-link smooth-transitions" onclick="scrollToSection('#sponsors')">SPONSORS</a>
                 </li>
               </ul>
             </div>
@@ -64,8 +65,12 @@
             <div id="header-subscript">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi hic corrupti
               officia voluptate ipsam, dolor ipsa quo earum nobis obcaecati.</div>
           </div>
+          <br>
+          <br>
           <div class="row">
-
+            <a class="button smooth-transitions" href="http://" target="_blank" rel="noopener noreferrer">
+              Apply Now
+            </a>
           </div>
         </div>
       </div>
