Implement sponsor logo sizing based on their tier

--- a/index.html
+++ b/index.html
@@ -218,28 +218,36 @@
             </div>
             <div id="gallery-content" class="row">
               <div class="col-md-3 gallery-image-container">
-                <img id="1" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/1_thumbnail.jpg" alt="" onclick="openImage(this)">
+                <img id="1" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/1_thumbnail.jpg"
+                  alt="" onclick="openImage(this)">
               </div>
               <div class="col-md-3 gallery-image-container">
-                <img id="2" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/2_thumbnail.jpg" alt="" onclick="openImage(this)">
+                <img id="2" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/2_thumbnail.jpg"
+                  alt="" onclick="openImage(this)">
               </div>
               <div class="col-md-3 gallery-image-container">
-                <img id="3" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/3_thumbnail.jpg" alt="" onclick="openImage(this)">
+                <img id="3" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/3_thumbnail.jpg"
+                  alt="" onclick="openImage(this)">
               </div>
               <div class="col-md-3 gallery-image-container">
-                <img id="4" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/4_thumbnail.jpg" alt="" onclick="openImage(this)">
+                <img id="4" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/4_thumbnail.jpg"
+                  alt="" onclick="openImage(this)">
               </div>
               <div class="col-md-3 gallery-image-container">
-                <img id="5" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/5_thumbnail.jpg" alt="" onclick="openImage(this)">
+                <img id="5" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/5_thumbnail.jpg"
+                  alt="" onclick="openImage(this)">
               </div>
               <div class="col-md-3 gallery-image-container">
-                <img id="6" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/6_thumbnail.jpg" alt="" onclick="openImage(this)">
+                <img id="6" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/6_thumbnail.jpg"
+                  alt="" onclick="openImage(this)">
               </div>
               <div class="col-md-3 gallery-image-container">
-                <img id="7" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/7_thumbnail.jpg" alt="" onclick="openImage(this)">
+                <img id="7" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/7_thumbnail.jpg"
+                  alt="" onclick="openImage(this)">
               </div>
               <div class="col-md-3 gallery-image-container">
-                <img id="8" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/8_thumbnail.jpg" alt="" onclick="openImage(this)">
+                <img id="8" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/8_thumbnail.jpg"
+                  alt="" onclick="openImage(this)">
               </div>
             </div>
           </div>
@@ -263,8 +271,10 @@
             </div>
             <br>
             <div class="row">
-              <div class="col-md-4">
-                <img src="static/images/sponsors/astraZeneca.png" alt="AstraZeneca" class="sponsor-image">
+              <div class="col-md-7">
+                <a href="https://www.astrazeneca.co.uk/" target="_blank" rel="noopener noreferrer">
+                  <img src="static/images/sponsors/astraZeneca.png" alt="AstraZeneca" class="sponsor-image">
+                </a>
               </div>
             </div>
           </div>
@@ -274,14 +284,15 @@
             </div>
             <br>
             <div class="row">
-              <div class="col-md-4">
-                <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+              <div class="col-md-5">
+                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                </a>
               </div>
-              <div class="col-md-4">
-                <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
-              </div>
-              <div class="col-md-4">
-                <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+              <div class="col-md-5">
+                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                </a>
               </div>
             </div>
           </div>
@@ -292,13 +303,19 @@
             <br>
             <div class="row">
               <div class="col-md-4">
-                <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                </a>
               </div>
               <div class="col-md-4">
-                <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                </a>
               </div>
               <div class="col-md-4">
-                <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                </a>
               </div>
             </div>
           </div>
@@ -308,14 +325,25 @@
             </div>
             <br>
             <div class="row">
-              <div class="col-md-4">
-                <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+              <div class="col-md-3">
+                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                </a>
               </div>
-              <div class="col-md-4">
-                <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+              <div class="col-md-3">
+                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                </a>
               </div>
-              <div class="col-md-4">
-                <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+              <div class="col-md-3">
+                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                </a>
+              </div>
+              <div class="col-md-3">
+                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                </a>
               </div>
             </div>
           </div>
@@ -332,4 +360,5 @@
 
   <script src="/static/js/main.js"></script>
 </footer>
+
 </html>
