--- a/index.html
+++ b/index.html
@@ -357,7 +357,35 @@
   </div>
 </body>
 <footer>
-
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-11">
+        <div class="row footer-text">
+          Designed by:&nbsp;
+          <a href="https://dribbble.com/sarunasb" target="_blank" rel="noopener noreferrer" class="link">
+            Sarunas Bukelis
+          </a>
+        </div>
+        <div class="row footer-text">
+          <div class="buffer-right-15">
+            © 2018 &nbsp;
+            <a href="https://www.hacksoc.com/" target="_blank" rel="noopener noreferrer" class="link">
+              HackSoc
+            </a>
+          </div>
+          <a href="https://www.facebook.com/GreatUniHack/" target="_blank" rel="noopener noreferrer">
+            <img class="social-logo" src="/static/images/social/facebook.png" alt="Facebook">
+          </a>
+          <a href="https://twitter.com/greatunihack" target="_blank" rel="noopener noreferrer">
+            <img class="social-logo" src="/static/images/social/twitter.png" alt="Twitter">
+          </a>
+          <a href="https://www.facebook.com/GreatUniHack/" target="_blank" rel="noopener noreferrer">
+            <img class="social-logo" src="/static/images/social/github.png" alt="GitHub">
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="/static/js/main.js"></script>
 </footer>
 
