Add responsiveness to sponsors section

--- a/index.html
+++ b/index.html
@@ -265,84 +265,80 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-11">
-          <div class="sponsors-row">
+          <div class="sponsors-tier">
             <div class="row">
               <h3>platinum sponsors</h3>
             </div>
-            <br>
-            <div class="row">
-              <div class="col-md-7">
+            <div class="row sponsor">
+              <div class="col-lg-7">
                 <a href="https://www.astrazeneca.co.uk/" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/astraZeneca.png" alt="AstraZeneca" class="sponsor-image">
+                  <img src="static/images/sponsors/astraZeneca.png" alt="AstraZeneca" class="sponsor-image platinum">
                 </a>
               </div>
             </div>
           </div>
-          <div class="sponsors-row">
+          <div class="sponsors-tier">
             <div class="row">
               <h3>gold sponsors</h3>
             </div>
-            <br>
-            <div class="row">
-              <div class="col-md-5">
+            <div class="row sponsor-row">
+              <div class="col-sm-5">
                 <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image gold">
                 </a>
               </div>
-              <div class="col-md-5">
+              <div class="col-sm-5">
                 <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image gold">
                 </a>
               </div>
             </div>
           </div>
-          <div class="sponsors-row">
+          <div class="sponsors-tier">
             <div class="row">
               <h3>silver sponsors</h3>
             </div>
-            <br>
-            <div class="row">
-              <div class="col-md-4">
+            <div class="row sponsor-row">
+              <div class="col-sm-4">
                 <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image silver">
                 </a>
               </div>
-              <div class="col-md-4">
+              <div class="col-sm-4">
                 <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image silver">
                 </a>
               </div>
-              <div class="col-md-4">
+              <div class="col-sm-4">
                 <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image silver">
                 </a>
               </div>
             </div>
           </div>
-          <div class="sponsors-row">
+          <div class="sponsors-tier">
             <div class="row">
               <h3>bronze sponsors</h3>
             </div>
-            <br>
-            <div class="row">
-              <div class="col-md-3">
-                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+            <div class="row sponsor-row">
+              <div class="col-sm-3">
+                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image bronze">
                 </a>
               </div>
-              <div class="col-md-3">
+              <div class="col-sm-3">
                 <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image bronze">
                 </a>
               </div>
-              <div class="col-md-3">
+              <div class="col-sm-3">
                 <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image bronze">
                 </a>
               </div>
-              <div class="col-md-3">
+              <div class="col-sm-3">
                 <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image">
+                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image bronze">
                 </a>
               </div>
             </div>
