Add responsiveness to hero section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="col-11">
           <nav class="navbar navbar-expand-md navbar-dark">
             <div class="navbar-brand">
-              <img src="static/images/logoWhite.png" alt="GreatUniHack 18" width="140">
+              <img src="static/images/logoWhite.png" alt="GreatUniHack 2018" width="140">
             </div>
             <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#collapsible-nav"
               aria-controls="collapsible-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -75,8 +75,8 @@
         </div>
       </div>
     </div>
-    <div id="timer" class="row purple">
-      <div class="col-sm-4 align-contents-vertical">
+    <div id="timer" class="row purple justify-content-center">
+      <div class="col-md-4 align-contents-vertical">
         <div>
           <div id="date-info" class="purple">
             10 - 11 November
@@ -86,19 +86,19 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-2 align-contents-vertical">
+      <div class="col-2 align-contents-vertical timer-column">
         <div id="days" class="timer-number"></div>
         <div class="number-subscript">DAYS</div>
       </div>
-      <div class="col-sm-2 align-contents-vertical">
+      <div class="col-2 align-contents-vertical timer-column">
         <div id="hours" class="timer-number"></div>
         <div class="number-subscript">HOURS</div>
       </div>
-      <div class="col-sm-2 align-contents-vertical">
+      <div class="col-2 align-contents-vertical timer-column">
         <div id="minutes" class="timer-number"></div>
         <div class="number-subscript">MINUTES</div>
       </div>
-      <div class="col-sm-2 align-contents-vertical">
+      <div class="col-2 align-contents-vertical timer-column">
         <div id="seconds" class="timer-number"></div>
         <div class="number-subscript">SECONDS</div>
       </div>
