Add responsiveness to the gallery

--- a/index.html
+++ b/index.html
@@ -217,35 +217,35 @@
               <h1>we had fun last year</h1>
             </div>
             <div id="gallery-content" class="row">
-              <div class="col-md-3 gallery-image-container">
+              <div class="col-3 gallery-image-container">
                 <img id="1" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/1_thumbnail.jpg"
                   alt="" onclick="openImage(this)">
               </div>
-              <div class="col-md-3 gallery-image-container">
+              <div class="col-3 gallery-image-container">
                 <img id="2" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/2_thumbnail.jpg"
                   alt="" onclick="openImage(this)">
               </div>
-              <div class="col-md-3 gallery-image-container">
+              <div class="col-3 gallery-image-container">
                 <img id="3" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/3_thumbnail.jpg"
                   alt="" onclick="openImage(this)">
               </div>
-              <div class="col-md-3 gallery-image-container">
+              <div class="col-3 gallery-image-container">
                 <img id="4" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/4_thumbnail.jpg"
                   alt="" onclick="openImage(this)">
               </div>
-              <div class="col-md-3 gallery-image-container">
+              <div class="col-3 gallery-image-container">
                 <img id="5" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/5_thumbnail.jpg"
                   alt="" onclick="openImage(this)">
               </div>
-              <div class="col-md-3 gallery-image-container">
+              <div class="col-3 gallery-image-container">
                 <img id="6" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/6_thumbnail.jpg"
                   alt="" onclick="openImage(this)">
               </div>
-              <div class="col-md-3 gallery-image-container">
+              <div class="col-3 gallery-image-container">
                 <img id="7" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/7_thumbnail.jpg"
                   alt="" onclick="openImage(this)">
               </div>
-              <div class="col-md-3 gallery-image-container">
+              <div class="col-3 gallery-image-container">
                 <img id="8" class="gallery-image smooth-transitions" src="/static/images/gallery/thumbnails/8_thumbnail.jpg"
                   alt="" onclick="openImage(this)">
               </div>
@@ -348,7 +348,8 @@
     </div>
   </section>
   <div id="image-preview-container" onclick="closeImage()">
-    <img id="image-preview">
+    <!-- <span class="helper"></span> -->
+    <img id="image-preview" src="/static/images/gallery/1.jpg">
     <i id="image-preview-close" class="fas fa-times fa-3x" onclick="closeImage()"></i>
   </div>
 </body>
