Improve "Apply" button

--- a/index.html
+++ b/index.html
@@ -65,13 +65,6 @@
             <div id="header-subscript">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi hic corrupti
               officia voluptate ipsam, dolor ipsa quo earum nobis obcaecati.</div>
           </div>
-          <br>
-          <br>
-          <div class="row">
-            <a class="button smooth-transitions" href="http://" target="_blank" rel="noopener noreferrer">
-              Apply Now
-            </a>
-          </div>
         </div>
       </div>
     </div>
@@ -101,6 +94,13 @@
       <div class="col-2 align-contents-vertical timer-column">
         <div id="seconds" class="timer-number"></div>
         <div class="number-subscript">SECONDS</div>
+      </div>
+      <div class="col-12">
+        <div id="apply-button" class="row">
+          <a class="button-white smooth-transitions" href="http://" target="_blank" rel="noopener noreferrer">
+            Apply Now
+          </a>
+        </div>
       </div>
     </div>
     <script src="/static/js/timer.js"></script>
