--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                 <li class="nav-item">
                   <a class="nav-link smooth-transitions" onclick="scrollToSection('#sponsors')">SPONSORS</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link smooth-transitions" href="http://" target="_blank" rel="noopener noreferrer">APPLY</a>
+                </li>
               </ul>
             </div>
           </nav>
@@ -267,30 +270,29 @@
         <div class="col-11">
           <div class="sponsors-tier">
             <div class="row">
-              <h3>platinum sponsors</h3>
+              <h3>platinum sponsor</h3>
             </div>
             <div class="row sponsor">
               <div class="col-lg-7">
-                <a href="https://www.astrazeneca.co.uk/" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/astraZeneca.png" alt="AstraZeneca" class="sponsor-image platinum">
-                </a>
+                <div class="row justify-content-center">
+                  <a href="https://www.astrazeneca.co.uk/" target="_blank" rel="noopener noreferrer">
+                    <img src="static/images/sponsors/astraZeneca.png" alt="AstraZeneca" class="sponsor-image platinum">
+                  </a>
+                </div>
               </div>
             </div>
           </div>
           <div class="sponsors-tier">
             <div class="row">
-              <h3>gold sponsors</h3>
+              <h3>gold sponsor</h3>
             </div>
             <div class="row sponsor-row">
               <div class="col-sm-5">
-                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image gold">
-                </a>
-              </div>
-              <div class="col-sm-5">
-                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image gold">
-                </a>
+                <div class="row justify-content-center">
+                  <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
+                    <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image gold">
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -299,20 +301,34 @@
               <h3>silver sponsors</h3>
             </div>
             <div class="row sponsor-row">
-              <div class="col-sm-4">
-                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image silver">
-                </a>
+              <div class="col-sm-3">
+                <div class="row justify-content-center">
+                  <a href="https://www.americanexpress.com" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
+                    <img id="amex-logo" src="static/images/sponsors/americanExpress.png" alt="American Express" class="sponsor-image silver">
+                  </a>
+                </div>
               </div>
-              <div class="col-sm-4">
-                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image silver">
-                </a>
+              <div class="col-sm-3">
+                <div class="row justify-content-center">
+                  <a href="https://www.morganstanley.com/" target="_blank" rel="noopener noreferrer">
+                    <img id="morgan-stanley-logo" src="static/images/sponsors/morganStanley.png" alt="Morgan Stanley"
+                      class="sponsor-image silver">
+                  </a>
+                </div>
               </div>
-              <div class="col-sm-4">
-                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image silver">
-                </a>
+              <div class="col-sm-3">
+                <div class="row justify-content-center">
+                  <a href="https://www.skyscanner.net" target="_blank" rel="noopener noreferrer">
+                    <img id="skyscanner-logo" src="static/images/sponsors/skyscanner.png" alt="Skyscanner" class="sponsor-image silver">
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="row justify-content-center">
+                  <a href="https://www.visa.co.uk/" target="_blank" rel="noopener noreferrer">
+                    <img id="visa-logo" src="static/images/sponsors/visa.png" alt="Visa" class="sponsor-image silver">
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -322,24 +338,32 @@
             </div>
             <div class="row sponsor-row">
               <div class="col-sm-3">
-                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image bronze">
-                </a>
+                <div class="row justify-content-center">
+                  <a href="https://www.codethink.co.uk/" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
+                    <img src="static/images/sponsors/codethink.png" alt="Codethink" class="sponsor-image bronze">
+                  </a>
+                </div>
               </div>
               <div class="col-sm-3">
-                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image bronze">
-                </a>
+                <div class="row justify-content-center">
+                  <a href="https://www.netcraft.com/" target="_blank" rel="noopener noreferrer">
+                    <img id="netcraft-logo" src="static/images/sponsors/netcraft.png" alt="Netcraft" class="sponsor-image bronze">
+                  </a>
+                </div>
               </div>
+            </div>
+          </div>
+          <div class="sponsors-tier">
+            <div class="row">
+              <h3>start-up sponsor</h3>
+            </div>
+            <div class="row sponsor-row">
               <div class="col-sm-3">
-                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image bronze">
-                </a>
-              </div>
-              <div class="col-sm-3">
-                <a href="https://www.cisco.com" target="_blank" rel="noopener noreferrer">
-                  <img src="static/images/sponsors/cisco.png" alt="Cisco" class="sponsor-image bronze">
-                </a>
+                <div class="row justify-content-center">
+                  <a href="https://www.pushdoctor.co.uk" target="_blank" rel="noopener noreferrer" class="sponsor-image-container">
+                    <img src="static/images/sponsors/pushDoctor.webp" alt="Push Doctor" class="sponsor-image bronze">
+                  </a>
+                </div>
               </div>
             </div>
           </div>
