--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="static/css/main.css">
   <link rel="stylesheet" href="static/css/hero.css">
   <link rel="stylesheet" href="static/css/aboutUs.css">
@@ -115,11 +114,11 @@
           <div class="row">
             <div id="about-us-content" class="col-md-6 align-contents-vertical">
               <h1>about us</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga corporis ducimus assumenda sed dicta
-                officia,
-                totam, quas aliquid esse cupiditate odit nesciunt eaque ab? Quaerat numquam accusamus nulla. Animi
-                perspiciatis
-                cum odio exercitationem, commodi hic molestias. Aut tenetur dolores illo!</p>
+              <p>We are GreatUniHack, an annual 24-hour student-oriented hackathon organised by the University of
+                Manchester tech society, HackSoc.</p>
+              <p>Established in 2014, we have brought together students from 88 universities across Europe to work and
+                develop innovative ideas in a competitive environment. This year's edition aims to introduce a new
+                generation of developers with great potential for improving the technology industry and community.</p>
             </div>
             <div class="col-md-6">
               <img id="about-us-img" src="static/images/aboutUsImg.jpg" alt="Team">
@@ -136,15 +135,15 @@
           <div class="row">
             <div class="col-md-4 question-card-container">
               <div class="question-card smooth-transitions">
-                <div class="question-title">LOREM IPSUM DOLOR SIT AMET</div>
-                <div class="question-answer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae
-                  perferendis
-                  molestias assumenda soluta repudiandae veritatis ullam ad odio numquam voluptatibus.</div>
+                <div class="question-title">WHAT IS A HACKATHON?</div>
+                <div class="question-answer">Hackathons are awesome events full of creativity, technology and
+                  passionate tech-related students collaborating and creating. Attendees work in teams to create apps,
+                  games, robots… literally anything you want to build & learn about!</div>
               </div>
             </div>
             <div class="col-md-4 question-card-container">
               <div class="question-card smooth-transitions">
-                <div class="question-title">LOREM IPSUM DOLOR SIT AMET</div>
+                <div class="question-title">HOW MUCH DOES IT COST?</div>
                 <div class="question-answer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae
                   perferendis
                   molestias assumenda soluta repudiandae veritatis ullam ad odio numquam voluptatibus.</div>
@@ -372,7 +371,6 @@
     </div>
   </section>
   <div id="image-preview-container" onclick="closeImage()">
-    <!-- <span class="helper"></span> -->
     <img id="image-preview" src="/static/images/gallery/1.jpg">
     <i id="image-preview-close" class="fas fa-times fa-3x" onclick="closeImage()"></i>
   </div>
